Added media queries, fix some blocks

--- a/homework-3-1/Forkio/index.html
+++ b/homework-3-1/Forkio/index.html
@@ -134,19 +134,19 @@
                <button class="git">
                <a href="#"><i class="fab fa-github"></i> GitHub</a>
                </button>
-               <span class="follower">7 352 Followers</span>
+               <p class="follower">7 352 Followers</p>
             </li>
             <li>
                <button class="twitter">
                <a href="#"><i class="fab fa-twitter"></i> Twitter</a>
                </button>
-               <span class="follower">136 312 Followers</span>
+               <p class="follower">136 312 Followers</p>
             </li>
             <li>
                <button class="facebook">
                <a href="#"><i class="fab fa-facebook-f"></i> Facebook</a>
                </button>
-               <span class="follower">218 092 Subscribers</span>
+               <p class="follower">218 092 Subscribers</p>
             </li>
          </ul>
       </section>
@@ -156,7 +156,7 @@
                <h2 class="ppl-title">People Are Talking About Fork</h2>
             </div>
          </div>
-         <div class="row card-wrap d-flex justify-content-between">
+         <div class="row card-wrap justify-content-between">
             <div class="col-xs-12 col-sm-6 col-md-4 card-p">
                <img src="img/talking/smashing.webp" alt="" width="165" height="43">
                <p>Sed vestibulum scelerisque urna, eu finibus leo facilisis sit amet. Proin id dignissim magna. Sed varius urna et pulvinar venenatis.</p>
@@ -221,8 +221,8 @@
                <p class="license">Unlimited Team Members <br /> 24/ 7 Phone Support</p>
                <button class="card-b">purchase</button>
             </div>
+            <p class="note">Duis lobortis arcu sed arcu tincidunt feugiat. Nulla nisi mauris, facilisis vitae aliquet id, imperdiet quis nibh. Donec eget elit eu libero tincidunt consequat nec elementum orci. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
          </div>
-         <p class="note">Duis lobortis arcu sed arcu tincidunt feugiat. Nulla nisi mauris, facilisis vitae aliquet id, imperdiet quis nibh. Donec eget elit eu libero tincidunt consequat nec elementum orci. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
       </section>
       <section class="subscribe container-fluid">
          <h2 class="subs-title">Subscribe To Our Newsletter</h2>
