Fix some bugs =)

--- a/homework-3-2/Panakeia/index.html
+++ b/homework-3-2/Panakeia/index.html
@@ -76,7 +76,7 @@
          <p class="news-text">Ut arcu arcu, faucibus eu risus blandit, pulvinar viverra justo. Phasellus arcu justo, ullamcorper non diam sit amet, luctus condimentum metus</p>
          <form action="#" class="form">
             <input class="input" type="email" placeholder="email adress" />
-            <button class="email-btn"><a href="#">Sign up</a></button>
+            <button type="submit" class="email-btn"><a href="#">Sign up</a></button>
          </form>
       </section>
       <section class="pre-footer">
